force-app/main/default/objects/Account/fields/Diagnosis_Code__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field tracks the diagnosis code, which needs to be sent to EGEKO.</description>
    <label>Diagnosis Code</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Complaint_Code_and_Severity__c.Code_Type__c</field>
            <operation>equals</operation>
            <value>Diagnosis</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Complaint_Code_and_Severity__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>