force-app/main/default/objects/Account/fields/IQVIA_Dexcom_Rank__c.field-meta.xml
<CustomField>
    <fullName>IQVIA_Dexcom_Rank__c</fullName>
    <description>Internally created based on number of unique patients over the last 12 months</description>
    <label>Dexcom Rank</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>