force-app/main/default/objects/Account/fields/IQVIA_OneKeyId__c.field-meta.xml
<CustomField>
    <fullName>IQVIA_OneKeyId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Contains unique IQVIA OneKey identifier</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>OneKey Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>