force-app/main/default/objects/Account/fields/IQVIA_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>IQVIA_Segmentation__c</fullName>
    <description>Created by IQVIA from Insulin Rank and Strips Rank.</description>
    <label>Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>A2</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>C2</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>D2</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>E2</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>LP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>