force-app/main/default/objects/Account/fields/IQVIA_Strips_Rank__c.field-meta.xml
<CustomField>
    <fullName>IQVIA_Strips_Rank__c</fullName>
    <label>Strips Rank</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>LP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>