force-app/main/default/objects/Account/fields/No_Of_Active_SSIP_Rules__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Active_SSIP_Rules__c</fullName>
    <label>No. Of Active SSIP Rules</label>
    <summaryForeignKey>SSIP_Rule__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>