force-app/main/default/objects/Account/fields/Number_of_Active_SSIP_Rules__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Active_SSIP_Rules__c</fullName>
    <description>Tracks number of active SSIP Rules attached to the Account</description>
    <label>Number of Active SSIP Rules</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>