force-app/main/default/objects/Account/fields/OK_Academic_Title__c.field-meta.xml
<CustomField>
    <fullName>OK_Academic_Title__c</fullName>
    <description>OneKey - Picklist Code = TIU</description>
    <label>Academic Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Leit. Chefarzt</fullName>
            </value>
            <value>
                <fullName>Leit. StatArzt</fullName>
            </value>
            <value>
                <fullName>Obermedizinaldir</fullName>
            </value>
            <value>
                <fullName>Oberpharmazierat</fullName>
            </value>
            <value>
                <fullName>Pharmacist</fullName>
            </value>
            <value>
                <fullName>Medical council</fullName>
            </value>
            <value>
                <fullName>Sanitary council</fullName>
            </value>
            <value>
                <fullName>ManagingConsult</fullName>
            </value>
            <value>
                <fullName>LeadPharmacist</fullName>
            </value>
            <value>
                <fullName>LeadConsultant</fullName>
            </value>
            <value>
                <fullName>Med Director</fullName>
            </value>
            <value>
                <fullName>LeadMedCouncil</fullName>
            </value>
            <value>
                <fullName>LeadParDirector</fullName>
            </value>
            <value>
                <fullName>Pharm Director</fullName>
            </value>
            <value>
                <fullName>Pharm Council</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>