force-app/main/default/objects/Account/fields/OK_Ind_Category__c.field-meta.xml
<CustomField>
    <fullName>OK_Ind_Category__c</fullName>
    <label>Ind. Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other ind cons</fullName>
            </value>
            <value>
                <fullName>Other ind dia</fullName>
            </value>
            <value>
                <fullName>Oth ind pub heal</fullName>
            </value>
            <value>
                <fullName>Other ind ins</fullName>
            </value>
            <value>
                <fullName>Other Ind adm</fullName>
            </value>
            <value>
                <fullName>Other dentist</fullName>
            </value>
            <value>
                <fullName>Veterinarian</fullName>
            </value>
            <value>
                <fullName>Not yet defined</fullName>
            </value>
            <value>
                <fullName>Phys nurse home</fullName>
            </value>
            <value>
                <fullName>Phys insurance</fullName>
            </value>
            <value>
                <fullName>Phys med center</fullName>
            </value>
            <value>
                <fullName>Phys autho</fullName>
            </value>
            <value>
                <fullName>Att phys</fullName>
            </value>
            <value>
                <fullName>Consult phys</fullName>
            </value>
            <value>
                <fullName>Dialys phys</fullName>
            </value>
            <value>
                <fullName>External address</fullName>
            </value>
            <value>
                <fullName>Functionary phys</fullName>
            </value>
            <value>
                <fullName>Alter pract</fullName>
            </value>
            <value>
                <fullName>Hosp pharm</fullName>
            </value>
            <value>
                <fullName>Hosp phys</fullName>
            </value>
            <value>
                <fullName>Hospital dentist</fullName>
            </value>
            <value>
                <fullName>Labor consult</fullName>
            </value>
            <value>
                <fullName>Phys priv pract</fullName>
            </value>
            <value>
                <fullName>Dent priv prac</fullName>
            </value>
            <value>
                <fullName>Officinal pharm</fullName>
            </value>
            <value>
                <fullName>Nursing staff</fullName>
            </value>
            <value>
                <fullName>Phsyio therap</fullName>
            </value>
            <value>
                <fullName>Private address</fullName>
            </value>
            <value>
                <fullName>Other pharm</fullName>
            </value>
            <value>
                <fullName>Other phys</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>