force-app/main/default/objects/Account/fields/OK_Ind_Type__c.field-meta.xml
<CustomField>
    <fullName>OK_Ind_Type__c</fullName>
    <description>OneKey - Picklist Code = TYP</description>
    <label>Ind. Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrator</fullName>
            </value>
            <value>
                <fullName>Res/Scientist</fullName>
            </value>
            <value>
                <fullName>Counselor/SW</fullName>
            </value>
            <value>
                <fullName>Dentist</fullName>
            </value>
            <value>
                <fullName>Dental Asst</fullName>
            </value>
            <value>
                <fullName>Nurse</fullName>
            </value>
            <value>
                <fullName>Phys. Therapist</fullName>
            </value>
            <value>
                <fullName>Lab Tech</fullName>
            </value>
            <value>
                <fullName>Physician</fullName>
            </value>
            <value>
                <fullName>Medical Asst</fullName>
            </value>
            <value>
                <fullName>Optician</fullName>
            </value>
            <value>
                <fullName>Optometrist</fullName>
            </value>
            <value>
                <fullName>Pharmacist</fullName>
            </value>
            <value>
                <fullName>Den. Prosthetist</fullName>
            </value>
            <value>
                <fullName>Pharm Tech</fullName>
            </value>
            <value>
                <fullName>Pharm. Asst.Tech</fullName>
            </value>
            <value>
                <fullName>Allied Health Pr</fullName>
            </value>
            <value>
                <fullName>Midwife</fullName>
            </value>
            <value>
                <fullName>Tech</fullName>
            </value>
            <value>
                <fullName>Veterinarian</fullName>
            </value>
            <value>
                <fullName>Veterinary Asst</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>