force-app/main/default/objects/Account/fields/OK_Main_Category__c.field-meta.xml
<CustomField>
    <fullName>OK_Main_Category__c</fullName>
    <description>OneKey - Picklist Code = LEX</description>
    <label>Main Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pharm/Wholesaler</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>SupplyingMedCtr</fullName>
            </value>
            <value>
                <fullName>Surgery</fullName>
            </value>
            <value>
                <fullName>Other Inst</fullName>
            </value>
            <value>
                <fullName>Home Address</fullName>
            </value>
            <value>
                <fullName>Practice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>