force-app/main/default/objects/Account/fields/OK_Specialty_2__c.field-meta.xml
<CustomField>
    <fullName>OK_Specialty_2__c</fullName>
    <description>Picklist (Unrestricted)</description>
    <label>Specialty 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General Medicine</fullName>
            </value>
            <value>
                <fullName>Anatomical Pathology</fullName>
            </value>
            <value>
                <fullName>Anaesthesiology</fullName>
            </value>
            <value>
                <fullName>Homeopathy</fullName>
            </value>
            <value>
                <fullName>Gastroenterology</fullName>
            </value>
            <value>
                <fullName>Biochemistry</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Abdominal / Digestive  Surgery</fullName>
            </value>
            <value>
                <fullName>HIV Medicine</fullName>
            </value>
            <value>
                <fullName>Lesion Care</fullName>
            </value>
            <value>
                <fullName>Cardiovascular/Vascular Surgery</fullName>
            </value>
            <value>
                <fullName>General Surgery</fullName>
            </value>
            <value>
                <fullName>Oral Surgery</fullName>
            </value>
            <value>
                <fullName>Child Surgery</fullName>
            </value>
            <value>
                <fullName>Thoracic Surgery</fullName>
            </value>
            <value>
                <fullName>Plastic Surgery</fullName>
            </value>
            <value>
                <fullName>Dermatology</fullName>
            </value>
            <value>
                <fullName>Social Paediatrics</fullName>
            </value>
            <value>
                <fullName>Endocrinology</fullName>
            </value>
            <value>
                <fullName>Veterinary</fullName>
            </value>
            <value>
                <fullName>Psychology</fullName>
            </value>
            <value>
                <fullName>Laboratory</fullName>
            </value>
            <value>
                <fullName>Dialysis Center - big -</fullName>
            </value>
            <value>
                <fullName>Lasercenter</fullName>
            </value>
            <value>
                <fullName>Physiology</fullName>
            </value>
            <value>
                <fullName>Pharmaceutical Commercial Assistant</fullName>
            </value>
            <value>
                <fullName>Pharmaceutical Engineer</fullName>
            </value>
            <value>
                <fullName>Gynaeco Oncology</fullName>
            </value>
            <value>
                <fullName>Hospital Pharmacy</fullName>
            </value>
            <value>
                <fullName>Geriatrics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>