force-app/main/default/objects/Account/fields/OK_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>OK_Status_Reason__c</fullName>
    <description>OneKey - Picklist Code = CAU</description>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial Loading</fullName>
            </value>
            <value>
                <fullName>Relation - CSC</fullName>
            </value>
            <value>
                <fullName>Relocation</fullName>
            </value>
            <value>
                <fullName>Invalidation</fullName>
            </value>
            <value>
                <fullName>Creation</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Maternity Leave</fullName>
            </value>
            <value>
                <fullName>Complete check</fullName>
            </value>
            <value>
                <fullName>Duplicate Rever.</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Rel. creation</fullName>
            </value>
            <value>
                <fullName>Relation suppres</fullName>
            </value>
            <value>
                <fullName>Data Privacy Law</fullName>
            </value>
            <value>
                <fullName>Simple modif.</fullName>
            </value>
            <value>
                <fullName>Moved to anothe.</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Quality control</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>No longer workin</fullName>
            </value>
            <value>
                <fullName>Reactivation</fullName>
            </value>
            <value>
                <fullName>Unverified inval</fullName>
            </value>
            <value>
                <fullName>Unknown address</fullName>
            </value>
            <value>
                <fullName>Moved/unknown ad</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>History forcing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>