force-app/main/default/objects/Account/fields/OK_Status_State__c.field-meta.xml
<CustomField>
    <fullName>OK_Status_State__c</fullName>
    <description>OneKey - Picklist Code = STE</description>
    <label>Status State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Maternity Leave</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Is.opening</fullName>
            </value>
            <value>
                <fullName>Reduced Activity</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Temp. Closed</fullName>
            </value>
            <value>
                <fullName>Temp. Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>