force-app/main/default/objects/Account/fields/OK_Structure_Type_Level__c.field-meta.xml
<CustomField>
    <fullName>OK_Structure_Type_Level__c</fullName>
    <description>OneKey - Picklist Code = TSR - Indentifies the workplace’s organizational level within a hierarchy structure.  In Onekey, a workplace can be a single-level entity, e.g. a private practice, but also a department, a group of departments, or a group of organizations.</description>
    <label>Structure Type Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Organisation, Hospital, Affiliate, Antenna</fullName>
            </value>
            <value>
                <fullName>Department</fullName>
            </value>
            <value>
                <fullName>Sub department</fullName>
            </value>
            <value>
                <fullName>Sub Sub dept</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>