force-app/main/default/objects/Account/fields/PersonBirthdate__c.field-meta.xml
<CustomField>
    <fullName>PersonBirthdate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PersonBirthdate</label>
    <type>Date</type>
</CustomField>