force-app/main/default/objects/Account/fields/Pregnant_or_Planning_Pregnancy__c.field-meta.xml
<CustomField>
    <fullName>Pregnant_or_Planning_Pregnancy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pregnant or Planning Pregnancy?</label>
    <type>Checkbox</type>
</CustomField>