force-app/main/default/objects/Account/fields/Rx_Date_Written__c.field-meta.xml
<CustomField>
    <fullName>Rx_Date_Written__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Not used anymore, please refer to Opportunity.</inlineHelpText>
    <label>Rx Date Written (Historical)</label>
    <type>Date</type>
</CustomField>