force-app/main/default/objects/Account/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <label>Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Medical Facility</fullName>
            </value>
            <value>
                <fullName>Clinic</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>Private Practice</fullName>
            </value>
            <value>
                <fullName>Nurse Practitioner</fullName>
            </value>
            <value>
                <fullName>Prescriber</fullName>
            </value>
            <value>
                <fullName>Physician Assistant</fullName>
            </value>
            <value>
                <fullName>govt insurance</fullName>
                <label>Govt Insurance</label>
            </value>
            <value>
                <fullName>private insurance</fullName>
                <label>Private Insurance</label>
            </value>
            <value>
                <fullName>CCG</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>intl corp clinic</fullName>
                <label>Intl Corp Clinic</label>
            </value>
            <value>
                <fullName>intl corp nc clinic</fullName>
                <label>Intl Corp NC Clinic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>