force-app/main/default/objects/Account/fields/Subscription_Pending_Payments__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Pending_Payments__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Subscription Pending Payments</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>