force-app/main/default/objects/Account/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <label>Warehouse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SDX</fullName>
            </value>
            <value>
                <fullName>HLNL</fullName>
            </value>
            <value>
                <fullName>SDDEXINTL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>