force-app/main/default/objects/Account/recordTypes/AT_Medical_Facility.recordType-meta.xml
<RecordType>
    <fullName>AT_Medical_Facility</fullName>
    <active>true</active>
    <description>Austria Medical Facility or Hospital</description>
    <label>AT Medical Facility</label>
</RecordType>