force-app/main/default/objects/Account/recordTypes/AT_Payor.recordType-meta.xml
<RecordType>
    <fullName>AT_Payor</fullName>
    <active>true</active>
    <description>Payors in Austria</description>
    <label>AT Payor</label>
</RecordType>